<resources>
    <string name="app_name">ShelfSmart</string>
    <string name="default_web_client_id">198658919150-v4dqjn0b786j2n11pipmv68juurplktv.apps.googleusercontent.com</string>

    <string name="title_welcome">ShelfSmart</string>
    <string name="search_hint">Search for books</string>
    <!-- TODO: NoSQL Database -->

    <!-- Sync Preferences -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Book Categories  -->
    <string name="category_1">Fiction</string>
    <string name="category_2">Non-Fiction</string>
    <string name="category_3">Novel</string>
    <string name="category_4">Romance</string>
    <string name="category_5">Children\'s Books</string>
    <string name="category_6">Biography</string>
    <string name="category_7">Autobiography</string>
    <string name="category_8">Mystery</string>

    <!-- Menu Options  -->
    <string name="menu_home">Home</string>
    <string name="menu_shelf">My Shelf</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_sharing">Sharing</string>
    <string name="menu_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <!-- Book Descriptions  -->
    <string name="description_1">Biden aims to expand vaccines for adults and children</string>
    <string name="description_2">Just got my first shot, helping the world to be a safer place</string>
    <string name="description_3">Local trains to be suspended in Bengal from tomorrow in view of covid-19</string>
    <string name="description_4">MHA asks states,UTs to ensure there are no fires in hospitals</string>
    <string name="description_5">Australian citizen sues PM Morrison over flight ban from india</string>
    <string name="description_6">Former India hockey coach Kaushik hospitalised after testing positive for COVID</string>
    <string name="description_7">Delhi records 20,960 fresh covid-19 infections, positivity rate at 26.37%</string>
    <string name="description_8">Barcelona church offers open-air space for Ramadan</string>
    <string name="description_9">Trillions of cicadas set to emerge in the US, here\'s why</string>
    <string name="description_10">Homemaker, economist: Candidates from all walks of life in Bengal assembly</string>
    <string name="title_activity_sidebar">SidebarActivity</string>

    <string name="menu_icon_desc">Menu</string>
    <string name="settings">Settings</string>
    <string name="user_icon_desc" />
    <string name="user_email_com">User@mail.com</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="forward_icon_profile_desc">forward_icon_profile_desc</string>
    <string name="wi_fi">Wi_Fi</string>
    <string name="not_connected">not_connected</string>
    <string name="go_to_available_networks">Go to available networks</string>
    <string name="language_icon_desc">language_icon_desc</string>
    <string name="forward_icon_language_desc">forward_icon_language_desc</string>
    <string name="wifi_icon_desc">wifi_icon_desc</string>
    <string name="notifications_icon_desc">notifications_icon_desc</string>
    <string name="notifications">Notifications</string>
    <string name="forward_icon_desc">forward_icon_desc</string>
    <string name="edit_email">Edit Email</string>
    <string name="edit_password">Edit Password</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="back">Back</string>
    <string name="option">Option</string>
    <string name="i_like_it">I Like It</string>
    <string name="edit_password_lbl">Edit Password</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_home">Home</string>

</resources>
