<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home"
            android:tint="@null"/>
        <item
            android:id="@+id/nav_shelf"
            android:icon="@drawable/ic_shelf"
            android:title="@string/menu_shelf"
            android:tint="@null"/>
        <item
            android:id="@+id/nav_sharing"
            android:icon="@drawable/ic_sharing_24"
            android:title="@string/menu_sharing"
            android:tint="@null"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_24"
            android:title="@string/menu_settings"
            android:tint="@null"/>
    </group>
</menu>
